--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lalezar%3A400"/>
   <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="styles/scss/style.css"/>
 </head>
 <body>
 <div class="desktop-1-H3V">
